--- a/miniproject/Lulu02_MS1_Sports/src/main/resources/application.properties
+++ b/miniproject/Lulu02_MS1_Sports/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9096
 spring.datasource.username=root
-spring.datasource.password=Lajibolala@1607
-spring.datasource.url=jdbc:mysql://localhost:3306/minisports
+spring.datasource.password=password
+spring.datasource.url=mypath
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql: true
